Avoid use of Stream#toList() to support compilation in Eclipse IDE